# hexcore-rellic

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _quick_build.py  binding.gyp  index.d.ts  index.js  index.mjs  package-lock.json  package.json
src/: main.cpp  rellic_decompile_pipeline.cpp  rellic_decompile_pipeline.h  rellic_llvm_compat.cpp  rellic_llvm_compat.h  rellic_opaque_ptr.cpp  rellic_opaque_ptr.h  rellic_passes.cpp  rellic_passes.h  rellic_wrapper.cpp  rellic_wrapper.h
test/: reference_validation.ll  test.js
